[gd_scene load_steps=9 format=3 uid="uid://cvyi2dbqw32gh"]

[ext_resource type="Script" uid="uid://pqdn7ri46guo" path="res://scenes/characters/Bird/scripts/bird.gd" id="1_ufw7l"]
[ext_resource type="Texture2D" uid="uid://25s888tiuqjr" path="res://scenes/characters/Bird/assets/eagle-attack.png" id="1_y8ldv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ufw7l"]
size = Vector2(32, 23.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e6abk"]
size = Vector2(29.0833, 3)

[sub_resource type="Animation" id="Animation_gmyyu"]
resource_name = "flying"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_y8ldv")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_y8ldv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/Sprite2D:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ufw7l"]
resource_name = "stun"
length = 0.1
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Sprite2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-1, 0), Vector2(1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jio2k"]
_data = {
&"RESET": SubResource("Animation_y8ldv"),
&"flying": SubResource("Animation_gmyyu"),
&"stun": SubResource("Animation_ufw7l")
}

[node name="Bird" type="Node2D" node_paths=PackedStringArray("animation_player", "enemy_body", "enemy_sprite")]
scale = Vector2(1.5, 1.5)
script = ExtResource("1_ufw7l")
animation_player = NodePath("Body/AnimationPlayer")
enemy_body = NodePath("Body")
enemy_sprite = NodePath("Body/Sprite2D")

[node name="Body" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Body"]

[node name="Hitbox" type="Area2D" parent="Body"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Hitbox"]
position = Vector2(-3.5, 6.25)
shape = SubResource("RectangleShape2D_ufw7l")
debug_color = Color(0.978779, 0, 0.393427, 0.42)

[node name="Hurtbox" type="Area2D" parent="Body"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Hurtbox"]
position = Vector2(-3.33333, -5.16667)
shape = SubResource("RectangleShape2D_e6abk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Body"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_jio2k")
}

[node name="PointA" type="Marker2D" parent="."]
position = Vector2(-34, -0.5)

[node name="PointB" type="Marker2D" parent="."]
position = Vector2(34, 0)

[node name="DeathTimer" type="Timer" parent="."]

[node name="StunTimer" type="Timer" parent="."]

[connection signal="body_entered" from="Body/Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_entered" from="Body/Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="StunTimer" to="." method="_on_stun_timer_timeout"]
